Uploaded report documents. Added Analysis and insights on K = 3 Cluster size

--- a/Medicare-Clustering.ipynb
+++ b/Medicare-Clustering.ipynb
@@ -297,7 +297,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Sampling data from each provider type for training the model\n",
+    "# Sampling data from each provider type to keep representation consistent\n",
     "def data_sampler(df, factor, it):\n",
     "    keep = []\n",
     "    for provider in it:\n",
@@ -608,12 +608,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Testing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Analysis and Insights "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 609,
+   "execution_count": 639,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -623,16 +637,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 615,
+   "execution_count": 640,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = pd.concat([df,pd.DataFrame(kmeans.labels_,columns=[\"Cluster\"], dtype=int)],axis=1)"
+    "data = pd.concat([df,pd.DataFrame(kmeans.labels_,columns=[\"Cluster\"], dtype=int)],axis=1)\n",
+    "data.drop(['index'], axis=1, inplace=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 616,
+   "execution_count": 641,
    "metadata": {},
    "outputs": [
     {
@@ -648,6 +663,104 @@
    ],
    "source": [
     "print(data['Cluster'].value_counts())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 642,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in normal:\n",
+    "    data[i] = np.exp(data[i])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 651,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>unique_patients_count</th>\n",
+       "      <th>pocket</th>\n",
+       "      <th>services_count</th>\n",
+       "      <th>average_submitted_charge</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Cluster</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0.0</th>\n",
+       "      <td>70.294264</td>\n",
+       "      <td>21.288636</td>\n",
+       "      <td>157.404489</td>\n",
+       "      <td>280.353135</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1.0</th>\n",
+       "      <td>75.455158</td>\n",
+       "      <td>20.988174</td>\n",
+       "      <td>170.904861</td>\n",
+       "      <td>285.327295</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2.0</th>\n",
+       "      <td>75.686030</td>\n",
+       "      <td>21.384065</td>\n",
+       "      <td>170.333675</td>\n",
+       "      <td>295.204041</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         unique_patients_count     pocket  services_count  \\\n",
+       "Cluster                                                     \n",
+       "0.0                  70.294264  21.288636      157.404489   \n",
+       "1.0                  75.455158  20.988174      170.904861   \n",
+       "2.0                  75.686030  21.384065      170.333675   \n",
+       "\n",
+       "         average_submitted_charge  \n",
+       "Cluster                            \n",
+       "0.0                    280.353135  \n",
+       "1.0                    285.327295  \n",
+       "2.0                    295.204041  "
+      ]
+     },
+     "execution_count": 651,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data[['Cluster', 'unique_patients_count', 'pocket', 'services_count', 'average_submitted_charge']].groupby('Cluster').mean()"
    ]
   }
  ],
